# LabsPP

./: README.md  TablesGenerator.sql  alembic.ini  app.py  blueprint.py  db_script.sql  db_utils.py  diagramDB.mwb  hello.py  lab5.yaml  lab6.mwb  lab6.mwb.bak  loaddata.py  models.py  pyproject.toml  server.py  shemas.py
alembic/versions/: 03556ff445d3_.py
totalCode/: DB_script.sql  Swagger.yaml  app.py  blueprint.py  db_utils.py  models.py  schemas.py  test_api.py
